--- a/RubicShape/index.html
+++ b/RubicShape/index.html
@@ -4,6 +4,12 @@
         <link rel="icon" type="image/svg+xml" href="../favicon.svg">
         <script src="../libs/phaser-3.52.0.js"></script>
         <script src="script.js" type="module"></script>
+
+        <style>
+            body {
+                margin: 0px;
+            }
+        </style>
     </head>
     <body>
 
